# Seahi-Serial

./: .env.example  .gitignore  AGENTS.md  CODE_REVIEW.md  README.md  RELEASE_NOTES.md  TEST_CASES.md  inspect_db.py  installer.iss  opencode.json  package-lock.json  package.json  refresh-icon-cache.ps1
.github/workflows/: build.yml
.mimocode/: .cron-lock
.mimocode/plans/: 1782375669341-cosmic-sailor.md  1782493415823-playful-island.md  1782779511855-tidy-squid.md  1782981812302-witty-falcon.md  1783413855868-nimble-cactus.md  1783584365193-neon-forest.md  1783672308957-cosmic-knight.md  1783761119746-eager-harbor.md
.walkthrough/: INTERACTION_BREAKTHROUGH.md  capture_window.py  find_window.py  interaction_test.py  interaction_v2.py  take_screenshot.ps1  usability_test.py  usability_v3.py
.walkthrough/shots/: usability_test_results.json  v3_results.json
.workbuddy/memory/: 2026-07-06.md  2026-07-18.md  2026-07-19.md  MEMORY.md
cloudflare-worker/: README.md  deploy.sh  package.json  schema.sql  worker.js  wrangler.toml
doc/: ARCHITECTURE.md  HANDOVER.md  USER_RESEARCH_HEURISTIC_WALKTHROUGH.md  USER_RESEARCH_PLAN.md  USER_RESEARCH_USABILITY_TEST.md
server/: INSTALL.md  README.md  error-server.js  package.json  sentry-webhook.js
skills/seahi-serial-dev/: SKILL.md
src/: index.html  wsl-mapping.html
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src-tauri/wsl-daemon/: _b64temp.txt  bridge_b64.txt  daemon_b64.txt  seahi_serial_bridge.py  seahi_serial_daemon.py  test_daemon.py
(+6 files in other folders)
