[package]
name = "seahi-serial"
version = "0.1.0"
description = "Seahi 串口调试器"
authors = ["Seahi"]
edition = "2021"

[[bin]]
name = "seahi-serial"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serialport = "3.3"
