[package]
name = "seahi-serial"
version = "0.1.15"
description = "Seahi 串口调试器"
authors = ["Seahi"]
edition = "2021"

[[bin]]
name = "seahi-serial"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serialport = "3.3"
winapi = { version = "0.3", features = ["setupapi", "guiddef"] }
windows-sys = { version = "0.59", features = ["Win32_Devices_DeviceAndDriverInstallation", "Win32_Foundation", "Win32_System_Threading", "Win32_System_SystemInformation"] }
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
